--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Search bar section -->
         <div class="search">
             <div class="search_input">
-                <input class="search_bar" type="search" placeholder="Search for a city...">
+                <input class="search_bar" type="search" placeholder="Search for a city..." id="search">
             </div>
             <div class="search_icon">
                 <button><i class="fa fa-search"></i></button>
